direct and copy initialization

--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -80,7 +80,21 @@
 	- ***list initialization*** (C++11)
 		- braced lists of initializers can be used.
 		- the compiler will not let us *list initialize* variables of built-in type if the initializer might lead to the loss of information. (*int* type object can't be list-initialized with a *long double* initializer)
-	- [**initialization forms - direct vs copy**](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-string-type-32) (with std::string and std::vector as examples)
+		- note that if we use a braced list initializer, but there is no way for the compiler to use the initializers to list initialize the object, the compiler would then try to use those initializers to directly construct the object (as if they were inside parentheses).
+			- **ensure that braced list initializers actually perform list initialization!** (when that is our goal)
+	- **initialization forms** (pulled from ch13)
+		- ***direct initialization***
+			- happens when we define variables using parentheses (or braces for list initialization) without an = sign.
+				- examples with [strings](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-string-type-32) and [vectors](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-vector-type-33).
+			- directly function-matches with defined class [constructors](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#constructors).
+			- **stick with this form of initialization when defining variables!** however, keep in mind [they can lead to the "most vexing parse" disambiguity problem.](https://en.cppreference.com/w/cpp/language/direct_initialization).
+		- ***copy initialization***
+			- generally happens when:
+				- we define variables using an = sign (and a single operand).
+				- pass an object as an argument to a parameter of nonreference type.
+				- return an object from a function that has a nonreference return type.
+			- when we use copy initialization, we are asking the compiler to copy the right-hand operand into the object being created, converting that operand if necessary.
+				- that conversion might be an [implicit class-type conversion](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#additional-class-features), which depends on the *explicit*-ness of the corresponding constructor.
 - declaration vs definition
 	- **variables must be defined exactly once but can be declared multiple times.**
 	- *extern* keyword declares but does not define.
