--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -30,16 +30,8 @@ int main() {
 
 ### new core ideas
 - strings are a specialized form of *container*.
-- strings default initialize to the empty string.
-- **initialization forms** (general, not string-specific)
-	- ***copy initialization*** has an = sign and uses the right-side of the equal sign as the (single) initializing value.
-		- results in [implicit class-type conversion](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#additional-class-features), which library classes might allow (i.e. std::string does for string literals), but i think it introduces too much unknown behavior for using classes i define myself.
-	- ***direct initialization*** (shown below with parentheses) can be used with initializers that consist of one or more values.
-		- can also be used with brackets (see example with [vector](#library-vector-type-33))
-		- **stick with this form of initialization!**
-			- however, keep in mind [they can lead to the "most vexing parse" disambiguity problem.](https://en.cppreference.com/w/cpp/language/direct_initialization)
 ~~~
-// how i initialize a string (all direct initializations)
+// initialization for strings (direct forms)
 string s1; // default initialization to the empty string
 string s2(s1); // s2 is a copy of s1
 string s3("value"); // s3 is a copy of the string literal
@@ -121,14 +113,12 @@ cout << punct_cnt << '\n';
 	- default initialize to an empty vector of the specified type.
 		- the most common way of using vector is to define an empty vector to which elements are added as their values become known at runtime.
 	- copy elements from another vector of the same type (using either direct or copy initialization like with strings)
-	- **list initialize** using { } curly braces (direct or copy initialization)
-		- if we use braces, but there is no way for the compiler to use the initializers to list initialize the object, the compiler would then try to use those initializers to construct the object (as if they were inside parentheses).
-			- **ensure that our bracketed list initializer actually performs list initialization!** (when that is our goal)
+	- list initialize using { } curly braces (direct or copy initialization)
 	- direct initialize from a specified number of elements with each element [value initialized](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22).
 		- we also have the option of providing a default initial value for all elements.
 	- direct initialize from a range defined by iterators of another container (including built-in arrays) of a convertible element type.
 ~~~
-// how i initialize a vector (all direct initializations)
+// initialization for vectors (direct forms)
 vector<T> v1; // default initialize empty vector of type T
 vector<T> v2(v1); // v2 has a copy of each element in v1
 vector<T> v3{a, b, c}; // v3 is list-initialized
@@ -232,7 +222,7 @@ for (auto iter = s.begin(); iter != s.end(); ++iter) {
 		- inherited from C and/or [array-to-pointer decay](https://stackoverflow.com/questions/1461432/what-is-array-to-pointer-decay)?
 	- we cannot initialize an array from a vector, but we can initialize a vector from an array (see in vector section).
 ~~~
-// how i initialize arrays
+// common ways to initialiaze arrays
 T arr[] = {a, b, c};
 T arr[n] = {}; // zeroed array of n elements (elements are value initialized)
 ~~~
