add distinction for copy constructor

--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -87,6 +87,7 @@
 			- happens when we define variables using parentheses (or braces for list initialization) without an = sign.
 				- examples with [strings](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-string-type-32) and [vectors](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-vector-type-33).
 			- directly function-matches with defined class [constructors](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#constructors).
+				- note that you can directly match with the copy constructor as well, so copy constructors aren't only used for copy initialization.
 			- **stick with this form of initialization when defining variables!** however, keep in mind [they can lead to the "most vexing parse" disambiguity problem.](https://en.cppreference.com/w/cpp/language/direct_initialization).
 		- ***copy initialization***
 			- generally happens when:
@@ -94,7 +95,8 @@
 				- pass an object as an argument to a parameter of nonreference type.
 				- return an object from a function that has a nonreference return type.
 			- when we use copy initialization, we are asking the compiler to copy the right-hand operand into the object being created, converting that operand if necessary.
-				- that conversion might be an [implicit class-type conversion](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#additional-class-features), which depends on the *explicit*-ness of the corresponding constructor.
+				- for class-types, the conversion depends on the existence of a corresponding [implicit class-type conversion](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#additional-class-features).
+			- for class-types, the copying itself (not the conversion) is defined by the copy or move constructor.
 - declaration vs definition
 	- **variables must be defined exactly once but can be declared multiple times.**
 	- *extern* keyword declares but does not define.
