try to make sense of copy constructors/init

--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -82,21 +82,21 @@
 		- the compiler will not let us *list initialize* variables of built-in type if the initializer might lead to the loss of information. (*int* type object can't be list-initialized with a *long double* initializer)
 		- note that if we use a braced list initializer, but there is no way for the compiler to use the initializers to list initialize the object, the compiler would then try to use those initializers to directly construct the object (as if they were inside parentheses).
 			- **ensure that braced list initializers actually perform list initialization!** (when that is our goal)
-	- **initialization forms** (pulled from ch13)
-		- ***direct initialization***
-			- happens when we define variables using parentheses (or braces for list initialization) without an = sign.
-				- examples with [strings](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-string-type-32) and [vectors](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-vector-type-33).
-			- directly function-matches with defined class [constructors](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#constructors).
-				- note that you can directly match with the copy constructor as well, so copy constructors aren't only used for copy initialization.
-			- **stick with this form of initialization when defining variables!** however, keep in mind [they can lead to the "most vexing parse" disambiguity problem.](https://en.cppreference.com/w/cpp/language/direct_initialization).
-		- ***copy initialization***
-			- generally happens when:
-				- we define variables using an = sign (and a single operand).
-				- pass an object as an argument to a parameter of nonreference type.
-				- return an object from a function that has a nonreference return type.
-			- when we use copy initialization, we are asking the compiler to copy the right-hand operand into the object being created, converting that operand if necessary.
-				- for class-types, the conversion depends on the existence of a corresponding [implicit class-type conversion](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#additional-class-features).
-			- for class-types, the copying itself (not the conversion) is defined by the copy or move constructor.
+	- ***direct initialization***
+		- happens when we define variables using parentheses (or braces for list initialization) without an = sign.
+			- examples with [strings](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-string-type-32) and [vectors](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-vector-type-33).
+		- directly function-matches with defined class [constructors](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#constructors).
+			- note that you can directly match with the copy constructor as well, so copy constructors aren't only used for copy initialization.
+		- **stick with this form of initialization when defining variables!** however, keep in mind [they can lead to the "most vexing parse" disambiguity problem.](https://en.cppreference.com/w/cpp/language/direct_initialization).
+	- ***copy initialization***
+		- happens when:
+			- we define variables using an = sign (and a single operand).
+			- pass an object as an argument to a parameter of nonreference type (pass by value).
+			- return an object from a function that has a nonreference return type (return by value).
+		- when we use copy initialization, we are asking the compiler to copy the right-hand operand into the object being created, converting that right-hand operand if necessary.
+			- for class-types, the conversion depends on the existence of a corresponding [implicit class-type conversion](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#additional-class-features).
+		- for class-types, the copying itself (after the conversion if there is one) is defined by the [copy constructor](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-13.md#copy-assign-destroy-131) or move constructor.
+			- NOTE: i don't know if this is entirely correct, see [C++ Reference on copy initialization](https://en.cppreference.com/w/cpp/language/copy_initialization) and relevant link to *copy elision*? should probably just direct initialize and pass/return references where possible lol.
 - declaration vs definition
 	- **variables must be defined exactly once but can be declared multiple times.**
 	- *extern* keyword declares but does not define.
