--- a/cpp_notebook/primer/ch-06.md
+++ b/cpp_notebook/primer/ch-06.md
@@ -52,9 +52,10 @@ int main() {
 ## argument passing (6.2)
 
 ### new core ideas
-- **parameter initialization works the same way as variable intialization!**
+- **parameter initialization works similarly to variable initialization**.
 - **passing arguments by value**
 	- when we initialize a *nonreference*-type variable, the value of the initializer is **copied**.
+		- see [copy initialization](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22)
 		- changes made to the variable inside the function have no effect on the initializer.
 	- pointers are also copied and can be used normally with address-type arguments (but generally use pass by reference instead).
 - **passing arguments by reference**
@@ -100,11 +101,10 @@ int main() {
 ### new core ideas
 - empty returns can be used in void functions to exit the function at an intermediate point.
 - non-void functions must return a value that is implicitly convertible to the function return type.
-- values are returned in exactly the same way variables and parameters are initialized.
-	- return value is used to initialize a temporary at the call site, and that temporary is the result of the function call.
-- functions can have a return type of a reference/pointer to something.
-	- **never return a reference or pointer to a local object.**
-	- also never directly return a literal when the function has a return type of a reference.
+- in return by value, the return value is used to [copy](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22) initialize a temporary variable (of the function return type) at the call site, and that temporary is the result of the function call.
+- functions can also return by reference.
+	- **never return a reference (or pointer) to a local object.**
+	- **never directly return a literal when the function has a return type of a reference.**
 		- recall local object *lifetime*!
 - **reference returns are lvalues, other return types yield rvalues**
 	- lvalue return gives the object itself, rvalue return essentially gives a temporary copy.
