--- a/cpp_notebook/primer/ch-07.md
+++ b/cpp_notebook/primer/ch-07.md
@@ -194,7 +194,7 @@ private:
 				- this could be a very hard bug to catch!
 	- **bottom line (at least for now as a beginner): do not allow implicit class-type conversions!!!**
 		- **declare <ins>single-argument</ins> constructors with the prefix keyword *explicit* to suppress implicit conversions.**
-			- side-effects: explicit constructors can only be used with [direct initialization (not copy initialization with an = sign)](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-string-type-32), and the compiler will not use this constructor in an automatic conversion (users will have to [explicitly cast](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-04.md#type-conversions) it to convert it).
+			- side-effects: explicit constructors can only be used with [direct initialization (not copy initialization with an = sign)](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22), and the compiler will not use this constructor in an automatic conversion (users will have to [explicitly cast](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-04.md#type-conversions) it to convert it).
 - aggregate classes and literal classes
 	- put off for now
 
