--- a/cpp_notebook/primer/ch-13.md
+++ b/cpp_notebook/primer/ch-13.md
@@ -3,12 +3,46 @@
 ## copy, assign, destroy (13.1)
 
 ### main core ideas
-- a constructor is the ***copy constructor*** if its first parameter is a reference to the class-type and any additional parameters have default values.
+- a constructor is the ***copy constructor*** if its first parameter is a **reference to its class-type** and any additional parameters have default values.
 	- usually the parameter is reference to const.
 	- usually not *explicit* (copy constructor is often used implicitly).
-	- a copy constructor is **always** synthesized if it's not manually defined (as opposed to [synthesized default constructors](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#constructors)).
-		- the synthesized copy constructor performs memberwise copying for each nonstatic member. 
-			- members of another class type are copied by the copy constructor for that respective class.
+	- if not manually defined, the copy constructor is **always** synthesized! (as opposed to [synthesized default constructors](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#constructors))
+		- the synthesized copy constructor performs (nonstatic) memberwise copying (using each member's respective copy constructor).
+	- copy constructors are also used in [copy initialization](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22).
+~~~
+// example copy constructor declaration
+class Foo {
+	Foo(const Foo& foo);
+};
+~~~
+
+- the ***copy-assignment operator*** is a function overload of the = operator.
+	- for consistency purposes, assignment operators ordinarily should return a reference to their left-hand operand (which can be accessed through the implicit *this* pointer).
+	- if not manually defined, the copy-assignment operator is **always** synthesized.
+		- the synthesized version performs (nonstatic) memberwise assignment (using each member's respective copy-assignment operator).
+		- also returns a reference to its left-hand operand.
+~~~
+// example copy-assignment operator overload declaration
+class Foo {
+public:
+	Foo& operator=(const Foo&);
+};
+~~~
+
+- the ***destructor*** frees the resources used by an object and destroys the nonstatic data members of the object.
+	- **the destructor runs its function body, then implicitly performs memberwise destruction** (calls destructors for class-type members, does nothing for built-in type members).
+		- note that the implicit destruction of a raw pointer does not *delete* the object to which that pointer points.
+	- if not manually defined, the destructor is **always** synthesized.
+		- the synthesized version is just a destructor with an empty body (memberwise destruction is always implicitly performed).
+	- 
+~~~
+// example destructor declaration
+class Foo {
+public:
+	~Foo();
+};
+~~~
 
 ### misc conventions and tips
-
+- [**rule of three/five/zero**](https://en.cppreference.com/w/cpp/language/rule_of_three)
+- 
