leave off ch13 for now

--- a/cpp_notebook/primer/ch-13.md
+++ b/cpp_notebook/primer/ch-13.md
@@ -25,7 +25,7 @@ class Foo {
 // example copy-assignment operator overload declaration
 class Foo {
 public:
-	Foo& operator=(const Foo&);
+	Foo& operator=(const Foo& foo);
 };
 ~~~
 
@@ -34,7 +34,6 @@ public:
 		- note that the implicit destruction of a raw pointer does not *delete* the object to which that pointer points.
 	- if not manually defined, the destructor is **always** synthesized.
 		- the synthesized version is just a destructor with an empty body (memberwise destruction is always implicitly performed).
-	- 
 ~~~
 // example destructor declaration
 class Foo {
@@ -43,6 +42,16 @@ public:
 };
 ~~~
 
+- ***= default*** explicitly asks the compiler to generate the synthesized versions of the copy-control members (similar to = default for the default constructor).
+- ***deleted functions*** are ones that are declared but cannot be used in any other way. (C++11)
+	- defined with ***= delete***
+	- specifically, we can use make the copy constructor and copy assignment operator deleted functions to prevent copies.
+		- never make the destructor a deleted function.
+	- in general, if a class has any data member that cannot be default constructed, copied, assigned, or destroyed, then the corresponding member function will be synthesized as a deleted function.
+		- in particular, note that if a class has a const or reference member, the synthesized copy-assignment operator will be synthesized as deleted.
+		- refer to Primer for detailed rules.
+	
+
 ### misc conventions and tips
 - [**rule of three/five/zero**](https://en.cppreference.com/w/cpp/language/rule_of_three)
-- 
+- before C++11, similar effects to *deleted functions* were achieved by making the corresponding functions private.
