--- a/cpp_notebook/primer/ch-07.md
+++ b/cpp_notebook/primer/ch-07.md
@@ -255,6 +255,6 @@ private:
 	- *MyClass obj;* creates a default-initialized object of type MyClass.
 	- *MyClass obj(val1, val2, val3);* creates an object of type MyClass that's initialized with the appropriate constructor.
 		- we can tell this isn't a function declaration because the parentheses enclose arguments instead of parameters (which would need types).
-- recall [forms of initialization](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-string-type-32) (use direct!)
+- recall [forms of initialization](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22) (use direct!)
 
 ## things to follow up on
