--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -132,8 +132,8 @@ int i = 1024, *p = &i, &r = i;
 
 - an (*lvalue*) **reference** (signified by a *declarator* with the *&* type modifier) refers to (is another name for) its initializer.
 	- refers to a single object (its initializer) throughout its lifetime.
-		- references may only be bound to an object, not to a literal or a more general expression (exception: reference to const).
-		- the type of the reference and the object to which it is bound must match exactly (exception: reference to const).
+		- references may only be bound to an object, not to a literal or a more general expression (exception: reference to const and classes related by inheritance).
+		- the type of the reference and the object to which it is bound must match exactly (exception: reference to const and classes related by inheritance).
 		- references must be initialized.
 	- *all* operations on a reference are actually operations on the object to which the reference is bound.
 	- references are not objects themselves.
@@ -141,7 +141,7 @@ int i = 1024, *p = &i, &r = i;
 	- a pointer is an object in its own right, unlike a reference.
 	- a pointer holds the address of another object.
 		- **address-of operator &**
-		- the type of the pointer and the object to which it points to must match exactly (exception: pointer to const).
+		- the type of the pointer and the object to which it points to must match exactly (exception: pointer to const and classes related by inheritance).
 	- the **dereference operator &ast;** yields the object that a pointer points to.
 		- can only be used on a valid pointer that points to an object.
 - pointer usage
