--- a/cpp_notebook/primer/ch-15.md
+++ b/cpp_notebook/primer/ch-15.md
@@ -1,3 +1,49 @@
 # chapter 15: object-oriented programming
 
-##
+## defining base and derived classes (15.1 and 15.2)
+
+### main core ideas 
+
+~~~
+// BulkQuote is derived from Quote
+// public means BulkQuote can be used as if it were a Quote (dynamic binding)
+class BulkQuote : public Quote { 
+public:
+	// delegating constructor to initialize base subobject part
+	Bulk_quote(const std::string& book, double p, std::size_t qty, double disc) :
+		Quote(book, p), min_qty(qty), discount(disc) { }
+
+	// explicitly note that NetPrice intends to override virtual NetPrice in Quote
+	double NetPrice(std::size_t) const override;
+};
+~~~
+
+- the base class defines as ***virtual*** those functions it expects its derived classes to define for themselves.
+	- the *virtual* keyword appears only on the declaration inside the class and may not be used on a function definition that appears outside the class body.
+	- **classes used as the root of an inheritance hierarchy almost always define a virtual destructor** even if they do no work or *=default*.
+- *protected* access specifier in a base class lets (only) derived classes access those members.
+- a derived object conceptually contains multiple parts: a *subobject* containing the (nonstatic) members defined in the derived class itself, plus subobjects corresponding to each base class from which the derived class inherits.
+	- **a derived class' constructor must use a base-class constructor to initialize its base-class part** (recall [delegating constructors](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#constructors)).
+	- in general, interactions with an object of a class-type should use the interface of that class, even if that object is the base-class (subobject) part of a derived object.
+- if a base class defines a [static member](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#static-class-members), there is only one such member defined for the entire hierarchy.
+	- we can use a static member (that's accessible) through either the base or derived class / object.
+- a class must be defined, not just declared, before we can use it as a base class.
+- we can prevent a class from being used as a base by following the class name with *final*.
+
+
+## conversions and inheritance (15.2.3)
+
+### main core ideas
+- we can *bind* (remember this includes functions that pass-by-reference) a pointer or reference to a base-class type *to* an object of a type derived from that base class.
+	- ***dynamic binding*** (or *runtime binding*) happens when a virtual function is called through a reference (or a pointer) to a base class.
+		- member functions that are not declared as virtual are resolved at compile time, not run time.
+- it is crucial to understand that the ***static type*** of a pointer or reference to a base class may differ from its ***dynamic type***.
+	- static type is known at compile time and is the type that an object is declared with.
+	- dynamic type may not be known until runtime and is the type that an object actually represents in memory.
+- there is an automatic conversion (when dealing with references and pointers) from a derived class to its base class, but there is no automatic conversion from the base class to its derived class(s).
+	- the compiler has no guarantee that an object declared with base type is actually a derived type (unless we cast).
+- there is no automatic derived-to-base conversion between objects themselves, but appropriately defined [copy constructors and copy assign operators](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-13.md) (whose parameters are usually reference to const) can create similar behavior. 
+	- base class constructors don't know about data members specific to only the derived class, so data members in common get copied and derived-class-specific data members get ignored or "sliced down".
+
+## virtual functions (15.3)
+- 
