--- a/cpp_notebook/primer/ch-15.md
+++ b/cpp_notebook/primer/ch-15.md
@@ -1,19 +1,19 @@
 # chapter 15: object-oriented programming
 
-## defining base and derived classes (15.1 and 15.2)
+## defining base and derived classes (15.1 + 15.2)
 
 ### main core ideas 
 
 ~~~
-// BulkQuote is derived from Quote
+// BulkQuote is a derived class from Quote
 // public means BulkQuote can be used as if it were a Quote (dynamic binding)
 class BulkQuote : public Quote { 
 public:
 	// delegating constructor to initialize base subobject part
-	Bulk_quote(const std::string& book, double p, std::size_t qty, double disc) :
+	BulkQuote(const std::string& book, double p, std::size_t qty, double disc) :
 		Quote(book, p), min_qty(qty), discount(disc) { }
 
-	// explicitly note that NetPrice intends to override virtual NetPrice in Quote
+	// explicitly signal that NetPrice intends to override virtual NetPrice in Quote
 	double NetPrice(std::size_t) const override;
 };
 ~~~
@@ -31,19 +31,30 @@ public:
 - we can prevent a class from being used as a base by following the class name with *final*.
 
 
-## conversions and inheritance (15.2.3)
+## inheritance conversions and virtual functions (15.2.3 + 15.3 + 15.4)
 
 ### main core ideas
-- we can *bind* (remember this includes functions that pass-by-reference) a pointer or reference to a base-class type *to* an object of a type derived from that base class.
-	- ***dynamic binding*** (or *runtime binding*) happens when a virtual function is called through a reference (or a pointer) to a base class.
-		- member functions that are not declared as virtual are resolved at compile time, not run time.
-- it is crucial to understand that the ***static type*** of a pointer or reference to a base class may differ from its ***dynamic type***.
-	- static type is known at compile time and is the type that an object is declared with.
-	- dynamic type may not be known until runtime and is the type that an object actually represents in memory.
-- there is an automatic conversion (when dealing with references and pointers) from a derived class to its base class, but there is no automatic conversion from the base class to its derived class(s).
+- (when dealing with references and pointers) there is an automatic conversion from a derived class to its base class, but there is no automatic conversion from the base class to its derived class(s).
 	- the compiler has no guarantee that an object declared with base type is actually a derived type (unless we cast).
 - there is no automatic derived-to-base conversion between objects themselves, but appropriately defined [copy constructors and copy assign operators](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-13.md) (whose parameters are usually reference to const) can create similar behavior. 
 	- base class constructors don't know about data members specific to only the derived class, so data members in common get copied and derived-class-specific data members get ignored or "sliced down".
+- the ***static type*** of a pointer or reference to a base class may differ from its ***dynamic type***.
+	- static type is known at compile time and is the type that an object is declared with.
+	- dynamic type may not be known until runtime and is the type that an object actually represents in memory.
+- we can *bind* a pointer or reference to a base-class type *to* an object of a type derived from that base class.
+- ***dynamic binding*** (or *runtime binding*) happens when a virtual function is called through a reference (or a pointer) to a base class.
+	- at runtime, the compiler decides which virtual function to use based on the dynamic type of the object bound to that pointer or reference.
+	- **virtuals are resolved at runtime only if the call is made through a reference or pointer. only in these cases is it possible for an object’s dynamic type to differ from its static type.**
+	- nonvirtual member functions and virtuals that aren't called through a reference/pointer are resolved at compile time.
+- we can specify the keyword ***override*** on a virtual function in a derived class to clearly signal our intention to both readers and the compiler.
+	- we can specify the keyword *final* to signal that a function can't be overriden.
+- virtual functions that have default arguments should use the same argument values in the base and derived classes (default arguments are always resolved to those defined in the static (which is usually the base) type).
+- the scope operator :: can be used to explicitly circumvent the virtual mechanism.
+- we can specify that a virtual function is a ***pure virtual*** by writing = 0 in place of a function body.
+	- pure virtuals have no definition / implementation.
+	- a pure virtual makes a class an ***abstract base class***.
+		- we can't directly create objects of a type that is an abstract base class.
+- **a constructor for a derived class initializes its direct base class only.**
 
-## virtual functions (15.3)
+## 
 - 
