wrap up oop for now

--- a/cpp_notebook/primer/ch-15.md
+++ b/cpp_notebook/primer/ch-15.md
@@ -5,8 +5,7 @@
 ### main core ideas 
 
 ~~~
-// BulkQuote is a derived class from Quote
-// public means BulkQuote can be used as if it were a Quote (dynamic binding)
+// BulkQuote is a derived class from Quote with public inheritance
 class BulkQuote : public Quote { 
 public:
 	// delegating constructor to initialize base subobject part
@@ -21,9 +20,13 @@ public:
 - the base class defines as ***virtual*** those functions it expects its derived classes to define for themselves.
 	- the *virtual* keyword appears only on the declaration inside the class and may not be used on a function definition that appears outside the class body.
 	- **classes used as the root of an inheritance hierarchy almost always define a virtual destructor** even if they do no work or *=default*.
-- *protected* access specifier in a base class lets (only) derived classes access those members.
+- each class controls access to its own members.
+	- ***protected*** access specifier in a base class lets (only) derived classes access those members.
+	- [public, protected, and private inheritance](https://stackoverflow.com/questions/860339/difference-between-private-public-and-protected-inheritance)
+	- details on access control in Primer 15.5
 - a derived object conceptually contains multiple parts: a *subobject* containing the (nonstatic) members defined in the derived class itself, plus subobjects corresponding to each base class from which the derived class inherits.
-	- **a derived class' constructor must use a base-class constructor to initialize its base-class part** (recall [delegating constructors](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#constructors)).
+	- **a derived class' constructor must use a (direct) base-class constructor to initialize its (direct) base-class part** (recall [delegating constructors](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#constructors)).
+		- or can "inherit" a constructor from its base class with a *using* declaration, which automatically generates code to do this for us!
 	- in general, interactions with an object of a class-type should use the interface of that class, even if that object is the base-class (subobject) part of a derived object.
 - if a base class defines a [static member](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#static-class-members), there is only one such member defined for the entire hierarchy.
 	- we can use a static member (that's accessible) through either the base or derived class / object.
@@ -48,13 +51,16 @@ public:
 	- nonvirtual member functions and virtuals that aren't called through a reference/pointer are resolved at compile time.
 - we can specify the keyword ***override*** on a virtual function in a derived class to clearly signal our intention to both readers and the compiler.
 	- we can specify the keyword *final* to signal that a function can't be overriden.
-- virtual functions that have default arguments should use the same argument values in the base and derived classes (default arguments are always resolved to those defined in the static (which is usually the base) type).
-- the scope operator :: can be used to explicitly circumvent the virtual mechanism.
-- we can specify that a virtual function is a ***pure virtual*** by writing = 0 in place of a function body.
-	- pure virtuals have no definition / implementation.
+- virtual functions that have default arguments should use the same argument values in the base and derived classes.
+	- default arguments are always resolved to those defined in the static (which is usually the base) type.
+- we can specify that a virtual function is a ***pure virtual*** by writing *= 0* in place of a function body.
+	- pure virtuals don't have to be defined / implemented.
 	- a pure virtual makes a class an ***abstract base class***.
 		- we can't directly create objects of a type that is an abstract base class.
-- **a constructor for a derived class initializes its direct base class only.**
 
-## 
-- 
+## class scope under inheritance (15.6)
+
+### main core ideas
+- the scope of a derived class nests inside the scope of its base classes.
+	- allows the members of a derived class to use members of its base class as if those members were part of the derived class.
+- the scope operator :: can be used to explicitly circumvent the virtual mechanism (but should generally avoid this by not reusing names).
