--- a/cpp_notebook/primer/ch-15.md
+++ b/cpp_notebook/primer/ch-15.md
@@ -19,7 +19,6 @@ public:
 
 - the base class defines as ***virtual*** those functions it expects its derived classes to define for themselves.
 	- the *virtual* keyword appears only on the declaration inside the class and may not be used on a function definition that appears outside the class body.
-	- **classes used as the root of an inheritance hierarchy almost always define a virtual destructor** even if they do no work or *=default*.
 - each class controls access to its own members.
 	- ***protected*** access specifier in a base class lets (only) derived classes access those members.
 	- [public, protected, and private inheritance](https://stackoverflow.com/questions/860339/difference-between-private-public-and-protected-inheritance)
@@ -27,6 +26,9 @@ public:
 - a derived object conceptually contains multiple parts: a *subobject* containing the (nonstatic) members defined in the derived class itself, plus subobjects corresponding to each base class from which the derived class inherits.
 	- **a derived class' constructor must use a (direct) base-class constructor to initialize its (direct) base-class part** (recall [delegating constructors](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#constructors)).
 		- or can "inherit" a constructor from its base class with a *using* declaration, which automatically generates code to do this for us!
+			- but default, copy, and move constructors aren't "inherited" this way.
+	- **classes used as the root of an inheritance hierarchy almost always define a virtual destructor** even if they do no work or *=default*.
+		- note that this is an exception to the rule of three/five (this should be done regardless of the presence of copy and assign).
 	- in general, interactions with an object of a class-type should use the interface of that class, even if that object is the base-class (subobject) part of a derived object.
 - if a base class defines a [static member](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#static-class-members), there is only one such member defined for the entire hierarchy.
 	- we can use a static member (that's accessible) through either the base or derived class / object.
