--- a/cpp_notebook/primer/ch-16.md
+++ b/cpp_notebook/primer/ch-16.md
@@ -21,7 +21,7 @@
 - if we want to use a type member *of* a template parameter, we must explicitly tell the compiler that the name is a type by using the *typename* keyword (otherwise the compiler will think the member is a data member).
 - template parameters follow normal parameter scoping rules and default argument rules.
 
-other stuff in Primer:
+### other stuff in Primer:
 - class friendship (one-to-one, general, specific)
 - template type aliases (for specific instances of templates and for general)
 - member templates (pretty much intuitive, useful for stuff like container constructors that take any kind of iterator)
@@ -30,5 +30,5 @@ other stuff in Primer:
 
 ## template argument deduction (16.2)
 
-## main core ideas
+### main core ideas
 - const conversions and array/function to pointer are the only automatic conversions for arguments to template parameters for functions (no arithmetic or user-defined implicit conversions).
