--- a/cpp_notebook/primer/ch-12.md
+++ b/cpp_notebook/primer/ch-12.md
@@ -1,3 +1,124 @@
 # chapter 12: dynamic memory
 
-##
+## overview
+
+Dynamic memory is memory maintained on the *heap* or *free store* at runtime.
+
+In C++, dynamic memory is managed through a pair of operators: *new*, which
+allocates, and optionally initializes, an object in dynamic memory and returns a pointer to that object; and *delete*, which takes a pointer to a dynamic object, destroys that object, and frees the associated memory. Dynamic memory is problematic because it is surprisingly hard to ensure that we free memory at the right time. Either we forget to free the memory—in which case we have a memory leak—or we free the memory when there are still pointers referring to that memory—in which case we have a *dangling* pointer that refers to memory that is no longer valid. 
+
+To make using dynamic memory easier (and safer), the new library provides two smart pointer types that manage dynamic objects. A smart pointer acts like a regular pointer with the important exception that it automatically deletes the object to which it points. The new library defines two kinds of smart pointers that differ in how they manage their underlying pointers: *shared_ptr*, which allows multiple pointers to refer to the same object, and *unique_ptr*, which “owns” the object to which it points. The library also defines a companion class named *weak_ptr* that is a weak reference to an object managed by a *shared_ptr*. All
+three are defined in the *memory* header.
+
+## smart pointers
+
+### main core ideas
+- ***memory*** standard library header
+- we supply the type to which the smart pointer can point inside angle brackets (smart pointers are templates).
+- default initialized smart pointer holds a null pointer.
+- smart pointer operations are similar to those on raw pointers:
+    - \* and -> operators
+    - name of smart pointer itself can be used in condition to check whether it holds something.
+    - other operations include:
+        - .get() returns the underlying raw pointer (use with caution, mostly only for interfacing with old code).
+        - std::swap(p, q) swaps the pointers in p and q.
+- ***shared_ptr< T >***
+    - ***make_shared< T >()*** template function allocates and initializes an object in dynamic memory and returns a *shared_ptr* that points to that object.
+        - *make_shared* uses its arguments to construct an object of the given type. 
+            - i.e. a call to *make_shared< std::string >* must pass argument(s) that match one of the std::string constructors.
+            - [value initialized](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22) if no arguments.
+        - **use *make_shared* instead of playing around with raw pointer arguments for shared_ptrs!**
+    - each shared_ptr keeps track of how many other shared_ptrs point to the same object (reference count concept).
+        - reference count incremented when we copy/assign/pass by value/return by value and decremented when the shared_ptr itself is destroyed (i.e. by going out of scope) or assigned to something else.
+        - once a shared_ptr count goes to zero, the object that it manages is automatically destroyed! (by the object's destructor)
+    - because memory is not freed until the last shared_ptr goes away, it can be important to be sure that shared_ptrs don’t stay around after they are no longer needed.
+~~~
+// factory returns a shared_ptr pointing to a dynamically allocated object
+shared_ptr<Foo> factory(T arg) {
+    // creates shared_ptr to Foo-type object constructed by arg
+    return make_shared<Foo>(arg);
+}
+
+void use_factory(T arg) {
+    shared_ptr<Foo> p = factory(arg); // ref count is now 1
+    // use p
+} 
+// p goes out of scope, ref count decremented, ref count is now 0
+// the memory to which p points is automatically freed
+~~~
+~~~
+// alternate
+shared_ptr<Foo> use_factory(T arg) {
+    shared_ptr<Foo> p = factory(arg); // ref count is now 1
+    // use p
+    return p; // reference count is incremented when we return p by value
+} 
+// p goes out of scope, ref count decremented, but ref count isn't 0
+// the memory to which p points is not freed
+~~~
+- ***unique_ptr< T >***
+    - define a *unique_ptr* by passing in a raw pointer to a dynamically allocated object (returned by *new*).
+    - *unique_ptr* signifies singular "ownership" of an object.
+        - only one *unique_ptr* at a time can point to a given object.
+        - the object to which a *unique_ptr* points is destroyed when the *unique_ptr* is destroyed.
+        - does not support copy or assignment.
+            - we can transfer ownership from one (nonconst) unique_ptr to another with *.release()* and *.reset(p)*.
+                - *u.release()* returns the raw pointer inside the unique_ptr u and makes u null ("releasing ownership" but not freeing any memory).
+                - *u.reset(p)* deletes the object to which unique_ptr u points and makes u point at the passed-in raw pointer p.
+            - exception to this rule: we can copy or assign a unique_ptr that is about to be destroyed (i.e. returning a copy of a local unique_ptr).
+                - this is a special kind of copy, see [move semantics]{}
+~~~
+// legal (exception to the rule of no copy or assignment)
+unique_ptr<int> clone(int p) {
+    unique_ptr<int> ret(new int(p));
+    // . . .
+    return ret;
+}
+~~~
+- **common smart pointer rules**:
+    - don’t use the same raw pointer value to initialize (or reset) more than one smart pointer.
+    - don’t delete the raw pointer returned from get().
+    - don’t use get() to initialize or reset another smart pointer.
+    - if you use a pointer returned by get(), remember that the pointer will become invalid when the last corresponding smart pointer goes away.
+    - if you use a smart pointer to manage a resource other than memory allocated by *new*, remember to pass a *deleter* function.
+- ***weak_ptr< T >***
+    - a smart pointer that doesn't have influence over the lifetime of the object to which it points.
+    - see Primer for details.
+
+### misc conventions and tips
+- **avoid performing manual memory management on smart pointers!** (kinda defeats the whole purpose lol)
+    - see Primer for details on misc functions for smart pointer usage, but prefer to stick with the ones mentioned here if possible.
+
+
+## direct memory management
+
+### main core ideas
+- ***new*** constructs an object on the heap and returns a raw pointer to that (dynamically allocated) object.
+~~~
+// ps_ are raw pointers to dynamically allocated objects of type string.
+string *ps1 = new string; // default initialized
+string *ps2 = new string(); // value initialized
+string *ps3 = new string(10, '9'); // initialized with constructor
+
+const string *pcs = new const string; // default initialized
+
+// p points to a dynamically allocated object of the type of obj. 
+// that object is initialized by obj (via copy constructor?).
+auto p1 = new auto(obj);
+~~~
+- ***delete*** takes a pointer to an object that was dynamically allocated by *new*, destroys the object, and frees the corresponding memory.
+    - also can take null pointers, in which case *delete* does nothing.
+        - **keep in mind a null pointer (pointing to absolutely nothing) is different from a *dangling pointer* (pointing to an object that has been deleted).**
+    - **deleting a pointer to memory that was not allocated on the heap by *new*, or deleting the same pointer value more than once, or trying to use a dangling pointer in any way is undefined and can corrupt the heap!!!**
+        - use smart pointers instead of raw pointers to avoid thinking about when and how to delete things!
+        - for limited protection when you *need* to use raw pointers, you should generally free memory only right before the raw pointer goes out of scope or set the raw pointer to null_ptr after deleting its object.
+- a dynamic object managed through a raw pointer exists until it is explicitly deleted.
+    - **functions that return raw pointers put the burden on callers to delete the memory.**
+        - use smart pointers!
+    - if the raw pointer itself goes out of scope, there's no way to free the memory that it pointed to.
+        - use smart pointers!
+- **avoid mixing smart pointers and regular pointers.**
+- 
+
+### misc conventions and tips
+- 
